<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="30dp"
              tools:context="com.zgd.gaussblur.MainActivity">

    <Button
        android:id="@+id/btn_to_normal_blurred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_to_normal_blurred"/>

    <Button
        android:id="@+id/btn_to_local_blurred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_to_local_blurred"/>

    <Button
        android:id="@+id/btn_to_dynamic_blurred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_to_dynamic_blurred"/>

    <Button
        android:id="@+id/btn_to_slidemenu_blurred"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/main_to_slidemenu_blurred"/>

</LinearLayout>